--- a/ios/PresensiStaf/Info.plist
+++ b/ios/PresensiStaf/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Feather.ttf</string>
+	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Kita membutuhkan akses Camera untuk Face Recognition</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Kita membutuhkan akses Camera untuk Face Recognition</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Kita membutuhkan akses Camera untuk Face Recognition</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Kita membutuhkan akses Camera untuk Face Recognition</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
