--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.0",
+    "react-native-camera": "^3.37.0",
     "react-native-flash-message": "^0.1.15",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
